2017-02-20  Manuel Rego Casasnovas  <rego@igalia.com>

        [css-grid] Remove compilation flag ENABLE_CSS_GRID_LAYOUT
        https://bugs.webkit.org/show_bug.cgi?id=167693

        Reviewed by Sergio Villar Senin.

        * Scripts/webkitperl/FeatureList.pm:
        * TestWebKitAPI/Configurations/FeatureDefines.xcconfig:
        * TestWebKitAPI/Tests/WebCore/CSSParser.cpp:
        (TestWebKitAPI::computeNumberOfTracks):
        (TestWebKitAPI::TEST):
        * TestWebKitAPI/Tests/WebCore/GridPosition.cpp:
        (TestWebKitAPI::TEST):

2017-02-19  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r212466.
        https://bugs.webkit.org/show_bug.cgi?id=168577

        causes crashes on AArch64 on linux, maybe it's causing crashes
        on iOS too (Requested by pizlo on #webkit).

        Reverted changeset:

        "The collector thread should only start when the mutator
        doesn't have heap access"
        https://bugs.webkit.org/show_bug.cgi?id=167737
        http://trac.webkit.org/changeset/212466

2017-02-17  Aakash Jain  <aakash_jain@apple.com>

        Fix failure from r212579.

        Unreviewed build-fix.

        * Scripts/webkitpy/tool/steps/checkpatchrelevance.py:
        (CheckPatchRelevance._changes_are_relevant): Return true for all groups others than jsc for now.

2017-02-17  Srinivasan Vijayaraghavan  <svijayaraghavan@apple.com>

        EWS should run JavaScriptCore tests
        https://bugs.webkit.org/show_bug.cgi?id=162458

        Reviewed by Alexey Proskuryakov.

        * QueueStatusServer/config/queues.py: Add jsc-ews queue.
        * QueueStatusServer/model/queuestatus.py:
        (QueueStatus.did_skip): Returns whether patch was skipped, based on status.
        * QueueStatusServer/handlers/statusbubble.py:
        (StatusBubble._should_show_bubble_for): Add logic to hide jsc-ews bubble if the patch does not touch jsc.
        * Scripts/webkitpy/common/checkout/scm/scm_mock.py: